# kaggle-competitions

./: LICENSE  pyproject.toml
competition/titanic/: A_data_science_framework.ipynb  attempt-1.ipynb  random_forest_classifier.ipynb
src/kaggle_competitions/: __init__.py
tutorial/notebook/: Python_Data_Visualizations.ipynb
visualization/: hotdogs.ipynb  practice.ipynb
visualization/data/: field_of_interest.csv  obama.csv  us-population-by-age.csv
