[project]
name = "kaggle-competitions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LeeFlyYoung", email = "leeflyyoung@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.4",
]

[project.scripts]
kaggle-competitions = "kaggle_competitions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
